@@ -595,6 +595,7 @@ wxMSW:
 - Fix Cygwin 1.7 build.
 - Include x64 configurations in MSVC 8/9 project files too.
 - Fix parallel build of MSVC 11/12 solutions (Artur Wieczorek).
+- Fix background of wxRadioBox buttons and wxSlider (Artur Wieczorek).
 - Fix appearance of wxToggleButtons with non default colours (Artur Wieczorek).
 
 
